--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cy:open": "cypress open",
     "test": "run-p --race dev cy:run",
     "watch:tailwind": "postcss static/tailwind.css -o static/index.css -w",
-    "build:tailwind": "cross-env NODE_ENV=production postcss static/tailwind.css -o static/index.css"
+    "build:tailwind": "NODE_ENV=production postcss static/tailwind.css -o static/index.css"
   },
   "dependencies": {
     "compression": "^1.7.1",
